--- a/estilo.css
+++ b/estilo.css
@@ -15,8 +15,8 @@ body {
 } */ 
 .center {
     margin: 0 auto;
-    max-width: 1200px;
     width:1200px;
+    max-width: 1200px;
 }
 header h1 {
     text-align: center;
@@ -49,10 +49,19 @@ nav ul li:active {
     background-color:#b3b1b3;
     color:black;
 }
- #map {
-        height: 500px;
-        width:100%;
+
+#map {
+    height: 500px;
+    width:100%;
  }
- section image {
-     width:30px;
+ footer {
+     width:100%;
+     height:40px;
+     background-color: #331135;
+     text-align: center;
+     margin: 50px 0 0 0;
+     padding: 0;
+     color:white;
+     font-family: 'Maven Pro', sans-serif;
  }
+ 
